Fix wrong size of form fields and submit button. Change title to uppercase only.

--- a/registration_form/css/master.css
+++ b/registration_form/css/master.css
@@ -36,6 +36,7 @@ input {
     margin: 10px;
     border: 1px;
     border-style: solid;
+    box-sizing: content-box;
 }
 
 input:focus {
